# arXivPaperCurator

./: .env.example  Dockerfile  README.md  compose.yaml  env_check.py  main.py  main2.py  pyproject.toml  test.py
airflow/: Dockerfile  entrypoint.sh  requirements-airflow.py  requirements-airflow.txt
airflow/dags/: hello_world_dag.py
src/: config.py  exceptions.py
src/db/interfaces.py/: base.py  postgresql.py
src/models/: paper.py
src/repositories/: paper.py
src/schemas/arxiv/: __init__.py  paper.py
src/schemas/pdf_parser/: __init__.py  models.py
src/services/: converter.py  metadata_fetcher.py
src/services/arxiv/: client.py  factory.py  parser.py
src/services/pdf_parser/: _docling.py  parser.py
